cmake_minimum_required(VERSION 3.12)
project(antlr4_parser)

set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-attributes")

#include_directories(mysql)
include_directories(base)
#include_directories(descriptor)
#include_directories(visitor)
include_directories(${CMAKE_SOURCE_DIR})
include_directories("/usr/local/include/antlr4-runtime")
include_directories("/usr/include/glib-2.0")
include_directories("/usr/lib/x86_64-linux-gnu/glib-2.0/include")
file(GLOB parser_source mysql/*.cpp)
file(GLOB descriptor_source descriptor/*.cpp)
file(GLOB visitor_source visitor/*.cpp)
#add_executable(antlr4_parser main.cpp ${parser_source} ${visitor_source})
add_executable(antlr4_parser main.cpp ${parser_source} ${descriptor_source} ${visitor_source})
target_link_libraries(antlr4_parser antlr4-runtime)