cmake_minimum_required(VERSION 3.12)
project(antlr4_parser)

set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-attributes")

list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/cmake")

find_package(Protobuf REQUIRED)
set(_PROTOBUF_LIBPROTOBUF protobuf::libprotobuf)
find_package(GRPC REQUIRED)
set(_GRPC_GRPCPP_REFLECTION gRPC::grpc++_reflection)

set(PROTO_SRC_DIR ${CMAKE_CURRENT_SOURCE_DIR}/proto-src/)
include_directories(${PROTO_SRC_DIR})

#include_directories(mysql)
include_directories(base)
#include_directories(descriptor)
#include_directories(visitor)
include_directories(${CMAKE_SOURCE_DIR})
include_directories("/usr/local/include/antlr4-runtime")
include_directories("/usr/include/glib-2.0")
include_directories("/usr/lib/x86_64-linux-gnu/glib-2.0/include")
file(GLOB parser_source mysql/*.cpp)
#file(GLOB descriptor_source descriptor/*.cpp)
file(GLOB visitor_source listeners/*.hpp)
#add_executable(antlr4_parser main.cpp ${parser_source} ${visitor_source})
add_executable(antlr4_parser main.cpp ${parser_source} ${visitor_source} MySQLParseServiceImpl.cpp proto_src/parser.pb.cc proto_src/parser.grpc.pb.cc)
target_link_libraries(antlr4_parser antlr4-runtime ${_GRPC_GRPCPP_REFLECTION} ${_PROTOBUF_LIBPROTOBUF})